// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree renders loaded component without errors 1`] = `
<styled.div>
  <Branch
    active={false}
    key="1"
    name="Urban Extent"
  >
    <Branch
      active={false}
      key="1"
      name="Administrative"
    >
      <Branch
        active={false}
        key="1"
        name="Area"
        unit="(sq. km.)"
      >
        <Branch
          active={false}
          key="299"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="2"
        name="Population"
        unit="(thousands)"
      >
        <Branch
          active={false}
          key="300"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="3"
        name="Population density"
        unit="(people per sq. km.)"
      >
        <Branch
          active={false}
          key="301"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="2"
      name="Built up"
    >
      <Branch
        active={false}
        key="4"
        name="Area"
        unit="(sq. km.)"
      >
        <Branch
          active={false}
          key="302"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="5"
        name="Population"
        unit="(thousands)"
      >
        <Branch
          active={false}
          key="303"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="6"
        name="Population density"
        unit="(people per sq. km.)"
      >
        <Branch
          active={false}
          key="304"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="3"
      name="Lit at night"
    >
      <Branch
        active={false}
        key="7"
        name="Area"
        unit="(sq. km.)"
      >
        <Branch
          active={false}
          key="305"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="8"
        name="Population"
        unit="(thousands)"
      >
        <Branch
          active={false}
          key="306"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="9"
        name="Population density"
        unit="(people per sq. km.)"
      >
        <Branch
          active={false}
          key="307"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="2"
    name="Demographics"
  >
    <Branch
      active={false}
      key="4"
      name="Births and Deaths"
    >
      <Branch
        active={false}
        key="10"
        name="Crude birth rate"
        unit="(live births per 1000 people)"
      >
        <Branch
          active={false}
          key="308"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="11"
        name="Crude death rate"
        unit="(deaths per 1000 people)"
      >
        <Branch
          active={false}
          key="1"
          leaf={true}
          name="total"
        />
        <Branch
          active={false}
          key="2"
          leaf={true}
          name="male"
        />
        <Branch
          active={false}
          key="3"
          leaf={true}
          name="female"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="5"
      name="Age and Sex"
    >
      <Branch
        active={false}
        key="12"
        name="Dependency ratio"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="4"
          leaf={true}
          name="0-14 or 65+ years"
        />
        <Branch
          active={false}
          key="5"
          leaf={true}
          name="0-14 years"
        />
        <Branch
          active={false}
          key="6"
          leaf={true}
          name="65+ years"
        />
      </Branch>
      <Branch
        active={false}
        key="13"
        name="Gender ratio"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="7"
          leaf={true}
          name="All ages"
        />
        <Branch
          active={false}
          key="8"
          leaf={true}
          name="At birth"
        />
        <Branch
          active={false}
          key="9"
          leaf={true}
          name="0-4 years"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="6"
      name="Religion and social groups"
    >
      <Branch
        active={false}
        key="14"
        name="Scheduled Caste (SC)"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="309"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="15"
        name="Scheduled Tribe (ST)"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="310"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="3"
    name="Jobs"
  >
    <Branch
      active={false}
      key="7"
      name="Labor force"
    >
      <Branch
        active={false}
        key="16"
        name="Working population, 15+ years"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="10"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="11"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="12"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="17"
        name="Working population, 7+ years"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="13"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="14"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="15"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="18"
        name="Labor force participation, 15+ years, usual"
        unit="(percent of age group)"
      >
        <Branch
          active={false}
          key="16"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="17"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="18"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="19"
        name="Labor force participation, 15+ years, weekly"
        unit="(percent of age group)"
      >
        <Branch
          active={false}
          key="19"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="20"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="21"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="20"
        name="Employment rate, 7+ years, main + marginal"
        unit="(percent of age group)"
      >
        <Branch
          active={false}
          key="22"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="23"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="24"
          leaf={true}
          name="Male"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="8"
      name="Unemployment"
    >
      <Branch
        active={false}
        key="21"
        name="Unemployment rate, 15+ years, usual"
        unit="(percent of labor force)"
      >
        <Branch
          active={false}
          key="25"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="26"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="27"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="22"
        name="Unemployment rate, 15+ years, weekly"
        unit="(percent of labor force)"
      >
        <Branch
          active={false}
          key="28"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="29"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="30"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="23"
        name="Unemployment rate, 15–24 years, usual"
        unit="(percent of labor force)"
      >
        <Branch
          active={false}
          key="31"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="32"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="33"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="24"
        name="Unemployment rate, 15–24 years, weekly"
        unit="(percent of labor force)"
      >
        <Branch
          active={false}
          key="34"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="35"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="36"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="25"
        name="Under-employment rate, 15+ years, marginal"
        unit="(percent of labor force)"
      >
        <Branch
          active={false}
          key="37"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="38"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="39"
          leaf={true}
          name="Male"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="9"
      name="Employment"
    >
      <Branch
        active={false}
        key="26"
        name="Employment by sector"
        unit="(percent of total employment)"
      >
        <Branch
          active={false}
          key="40"
          leaf={true}
          name="Agriculture"
        />
        <Branch
          active={false}
          key="41"
          leaf={true}
          name="Manufacturing"
        />
        <Branch
          active={false}
          key="42"
          leaf={true}
          name="Industry (including manufacturing)"
        />
        <Branch
          active={false}
          key="43"
          leaf={true}
          name="Services"
        />
      </Branch>
      <Branch
        active={false}
        key="27"
        name="Farmers"
        unit="(percent of total employment)"
      >
        <Branch
          active={false}
          key="44"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="45"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="46"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="28"
        name="Self-employed"
        unit="(percent of total employment)"
      >
        <Branch
          active={false}
          key="47"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="48"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="49"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="29"
        name="Casual wage earners"
        unit="(percent of total employment)"
      >
        <Branch
          active={false}
          key="50"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="51"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="52"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="30"
        name="Regular wage earners"
        unit="(percent of total employment)"
      >
        <Branch
          active={false}
          key="53"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="54"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="55"
          leaf={true}
          name="Male"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="10"
      name="Earnings"
    >
      <Branch
        active={false}
        key="31"
        name="Labor earnings by gender"
        unit="(current USD per day)"
      >
        <Branch
          active={false}
          key="56"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="57"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="58"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="32"
        name="Labor earnings by sector"
        unit="(current USD per day)"
      >
        <Branch
          active={false}
          key="59"
          leaf={true}
          name="Agriculture"
        />
        <Branch
          active={false}
          key="60"
          leaf={true}
          name="Industry"
        />
        <Branch
          active={false}
          key="61"
          leaf={true}
          name="Services"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="4"
    name="Economic Activity"
  >
    <Branch
      active={false}
      key="11"
      name="Output"
    >
      <Branch
        active={false}
        key="33"
        name="GDP"
        unit="(current USD, in millions)"
      >
        <Branch
          active={false}
          key="311"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="34"
        name="GDP per capita"
        unit="(current USD)"
      >
        <Branch
          active={false}
          key="312"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="35"
        name="GVA by sector, ISIC 3.1"
        unit="(percent of GDP)"
      >
        <Branch
          active={false}
          key="62"
          leaf={true}
          name="Agriculture, fishing, hunting and forestry (A, B)"
        />
        <Branch
          active={false}
          key="63"
          leaf={true}
          name="Mining and quarrying (C)"
        />
        <Branch
          active={false}
          key="64"
          leaf={true}
          name="Manufacturing (D)"
        />
        <Branch
          active={false}
          key="65"
          leaf={true}
          name="Electricity, gas and water supply (E)"
        />
        <Branch
          active={false}
          key="66"
          leaf={true}
          name="Construction (F)"
        />
        <Branch
          active={false}
          key="67"
          leaf={true}
          name="Trade, hotels and restaurants (G, H)"
        />
        <Branch
          active={false}
          key="68"
          leaf={true}
          name="Transportation, storage and communications (I)"
        />
        <Branch
          active={false}
          key="69"
          leaf={true}
          name="Financial intermediation (J)"
        />
        <Branch
          active={false}
          key="70"
          leaf={true}
          name="Real estate, renting and business activities (K)"
        />
        <Branch
          active={false}
          key="71"
          leaf={true}
          name="Public administration (L)"
        />
        <Branch
          active={false}
          key="72"
          leaf={true}
          name="Other (M, N, O, P, Q)"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="12"
      name="Night light intensity"
    >
      <Branch
        active={false}
        key="36"
        name="Light intensity per 1000 people"
        unit="(Digital Numbers of light per 1000 people)"
      >
        <Branch
          active={false}
          key="313"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="37"
        name="Light intensity per area"
        unit="(Digital Numbers of light per sq. km.) "
      >
        <Branch
          active={false}
          key="314"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="13"
      name="Productivity of agriculture"
    >
      <Branch
        active={false}
        key="38"
        name="Crop yields, monetary"
        unit="(2011 USD per ha., in thousands)"
      >
        <Branch
          active={false}
          key="73"
          leaf={true}
          name="All"
        />
        <Branch
          active={false}
          key="74"
          leaf={true}
          name="Groundnut"
        />
        <Branch
          active={false}
          key="75"
          leaf={true}
          name="Maize"
        />
        <Branch
          active={false}
          key="76"
          leaf={true}
          name="Millets"
        />
        <Branch
          active={false}
          key="77"
          leaf={true}
          name="Pulses"
        />
        <Branch
          active={false}
          key="78"
          leaf={true}
          name="Rice"
        />
        <Branch
          active={false}
          key="79"
          leaf={true}
          name="Sugar cane"
        />
        <Branch
          active={false}
          key="80"
          leaf={true}
          name="Wheat"
        />
      </Branch>
      <Branch
        active={false}
        key="39"
        name="Crop yields, quantity"
        unit="(tonnes per ha.)"
      >
        <Branch
          active={false}
          key="81"
          leaf={true}
          name="All"
        />
        <Branch
          active={false}
          key="82"
          leaf={true}
          name="Groundnut"
        />
        <Branch
          active={false}
          key="83"
          leaf={true}
          name="Maize"
        />
        <Branch
          active={false}
          key="84"
          leaf={true}
          name="Millets"
        />
        <Branch
          active={false}
          key="85"
          leaf={true}
          name="Pulses"
        />
        <Branch
          active={false}
          key="86"
          leaf={true}
          name="Rice"
        />
        <Branch
          active={false}
          key="87"
          leaf={true}
          name="Sugar cane"
        />
        <Branch
          active={false}
          key="88"
          leaf={true}
          name="Wheat"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="14"
      name="Productivity of manufacturing"
    />
    <Branch
      active={false}
      key="15"
      name="Productivity of services"
    />
  </Branch>
  <Branch
    active={false}
    key="5"
    name="Infrastructure"
  >
    <Branch
      active={false}
      key="16"
      name="Connectivity"
    >
      <Branch
        active={false}
        key="40"
        name="Road length"
        unit="(km.)"
      >
        <Branch
          active={false}
          key="89"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="90"
          leaf={true}
          name="Major highways, primary and secondary"
        />
        <Branch
          active={false}
          key="91"
          leaf={true}
          name="Tertiary and rural"
        />
        <Branch
          active={false}
          key="92"
          leaf={true}
          name="Other"
        />
      </Branch>
      <Branch
        active={false}
        key="41"
        name="Road intensity"
        unit="(km. per 1000 sq. km.)"
      >
        <Branch
          active={false}
          key="93"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="94"
          leaf={true}
          name="Major highways, primary and secondary"
        />
        <Branch
          active={false}
          key="95"
          leaf={true}
          name="Tertiary and rural"
        />
        <Branch
          active={false}
          key="96"
          leaf={true}
          name="Other"
        />
      </Branch>
      <Branch
        active={false}
        key="42"
        name="Number of stations"
        unit="(stations)"
      >
        <Branch
          active={false}
          key="97"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="98"
          leaf={true}
          name="Railway"
        />
        <Branch
          active={false}
          key="99"
          leaf={true}
          name="Metro"
        />
      </Branch>
      <Branch
        active={false}
        key="43"
        name="Density of stations"
        unit="(stations per 1000 sq. km.)"
      >
        <Branch
          active={false}
          key="100"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="101"
          leaf={true}
          name="Railway"
        />
        <Branch
          active={false}
          key="102"
          leaf={true}
          name="Metro"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="17"
      name="Energy"
    >
      <Branch
        active={false}
        key="44"
        name="Households’ access to electricity"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="103"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="104"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="45"
        name="Households’ use of fuel for cooking"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="105"
          leaf={true}
          name="Biomass"
        />
        <Branch
          active={false}
          key="106"
          leaf={true}
          name="Coal/lignite/charcoal"
        />
        <Branch
          active={false}
          key="107"
          leaf={true}
          name="Kerosene"
        />
        <Branch
          active={false}
          key="108"
          leaf={true}
          name="LPG/PNG"
        />
        <Branch
          active={false}
          key="109"
          leaf={true}
          name="Electricity"
        />
        <Branch
          active={false}
          key="110"
          leaf={true}
          name="Biogas"
        />
      </Branch>
      <Branch
        active={false}
        key="46"
        name="Households’ use of fuel for light"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="111"
          leaf={true}
          name="Kerosene"
        />
        <Branch
          active={false}
          key="112"
          leaf={true}
          name="Gas/other oil"
        />
        <Branch
          active={false}
          key="113"
          leaf={true}
          name="Electricity"
        />
        <Branch
          active={false}
          key="114"
          leaf={true}
          name="Candle/others"
        />
        <Branch
          active={false}
          key="115"
          leaf={true}
          name="No lighting arrangement"
        />
      </Branch>
      <Branch
        active={false}
        key="47"
        name="Non-agriculture enterprises’ use of electricity"
        unit="(percent of establishments)"
      >
        <Branch
          active={false}
          key="116"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="117"
          leaf={true}
          name="Public"
        />
        <Branch
          active={false}
          key="118"
          leaf={true}
          name="Private"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="18"
      name="Water and Sanitation"
    >
      <Branch
        active={false}
        key="48"
        name="Households’ access to improved water"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="119"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="120"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="49"
        name="Households’ access to improved sanitation"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="121"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="122"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="50"
        name="Households’ access to enhanced improved sanitation"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="123"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="124"
          leaf={true}
          name="Slums"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="19"
      name="Housing"
    >
      <Branch
        active={false}
        key="51"
        name="Housing units in good condition"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="125"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="126"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="52"
        name="Housing units located in slums"
        unit="(percent of housing units)"
      >
        <Branch
          active={false}
          key="315"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="53"
        name="Use of biomass to cook indoors"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="127"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="128"
          leaf={true}
          name="Slums"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="6"
    name="Information Technology"
  >
    <Branch
      active={false}
      key="20"
      name="Computer"
    />
    <Branch
      active={false}
      key="21"
      name="Internet"
    />
    <Branch
      active={false}
      key="22"
      name="Cellphone"
    />
  </Branch>
  <Branch
    active={false}
    key="7"
    name="Finance"
  >
    <Branch
      active={false}
      key="23"
      name="Access"
    />
  </Branch>
  <Branch
    active={false}
    key="8"
    name="Business"
  >
    <Branch
      active={false}
      key="24"
      name="Economic census"
    >
      <Branch
        active={false}
        key="54"
        name="Non-agriculture enterprises"
        unit="(thousands)"
      >
        <Branch
          active={false}
          key="316"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="55"
        name="Non-agriculture enterprises by size"
        unit="(percent of establishments)"
      >
        <Branch
          active={false}
          key="129"
          leaf={true}
          name="1"
        />
        <Branch
          active={false}
          key="130"
          leaf={true}
          name="2-5"
        />
        <Branch
          active={false}
          key="131"
          leaf={true}
          name="6-9"
        />
        <Branch
          active={false}
          key="132"
          leaf={true}
          name="10–19"
        />
        <Branch
          active={false}
          key="133"
          leaf={true}
          name="20–99"
        />
        <Branch
          active={false}
          key="134"
          leaf={true}
          name="100+"
        />
      </Branch>
      <Branch
        active={false}
        key="56"
        name="Non-agriculture enterprises by sector, ISIC 3.1"
        unit="(percent of establishments)"
      >
        <Branch
          active={false}
          key="135"
          leaf={true}
          name="Mining and quarrying (C)"
        />
        <Branch
          active={false}
          key="136"
          leaf={true}
          name="Manufacturing (D)"
        />
        <Branch
          active={false}
          key="137"
          leaf={true}
          name="Electricity, gas and water supply (E)"
        />
        <Branch
          active={false}
          key="138"
          leaf={true}
          name="Construction (F)"
        />
        <Branch
          active={false}
          key="139"
          leaf={true}
          name="Trade, hotels and restaurants (G, H)"
        />
        <Branch
          active={false}
          key="140"
          leaf={true}
          name="Transportation, storage and communications (I)"
        />
        <Branch
          active={false}
          key="141"
          leaf={true}
          name="Financial intermediation (J)"
        />
        <Branch
          active={false}
          key="142"
          leaf={true}
          name="Real estate, renting and business activities (K)"
        />
        <Branch
          active={false}
          key="143"
          leaf={true}
          name="Public administration (L)"
        />
        <Branch
          active={false}
          key="144"
          leaf={true}
          name="Education, health and social (M, N, O)"
        />
      </Branch>
      <Branch
        active={false}
        key="57"
        name="Specialization index of private non-agriculture enterprises, ISIC 3.1"
        unit="(index)"
      >
        <Branch
          active={false}
          key="145"
          leaf={true}
          name="2 digit"
        />
        <Branch
          active={false}
          key="146"
          leaf={true}
          name="4 digit"
        />
      </Branch>
      <Branch
        active={false}
        key="58"
        name="Diversification index of private non-agriculture enterprises, ISIC 3.1"
        unit="(index)"
      >
        <Branch
          active={false}
          key="147"
          leaf={true}
          name="2 digit"
        />
        <Branch
          active={false}
          key="148"
          leaf={true}
          name="4 digit"
        />
      </Branch>
      <Branch
        active={false}
        key="59"
        name="Non-agriculture enterprises by ownership"
        unit="(percent of establishments)"
      >
        <Branch
          active={false}
          key="149"
          leaf={true}
          name="Public"
        />
        <Branch
          active={false}
          key="150"
          leaf={true}
          name="Private"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="25"
      name="Formal manufacturing"
    />
    <Branch
      active={false}
      key="26"
      name="Informal manufacturing"
    />
    <Branch
      active={false}
      key="27"
      name="Informal services"
    />
  </Branch>
  <Branch
    active={false}
    key="9"
    name="Living Standards"
  >
    <Branch
      active={false}
      key="28"
      name="Consumption"
    >
      <Branch
        active={false}
        key="60"
        name="Household per capita expenditure"
        unit="(current USD per capita per month)"
      >
        <Branch
          active={false}
          key="317"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="61"
        name="Poverty rate at $1.25 a day (PPP)"
        unit="(percent of population)"
      >
        <Branch
          active={false}
          key="318"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="62"
        name="Poverty rate at national poverty line"
        unit="(percent of population)"
      >
        <Branch
          active={false}
          key="319"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="63"
        name="Share of bottom 40 percent"
        unit="(percent of population)"
      >
        <Branch
          active={false}
          key="320"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="64"
        name="90 to 10 ratio of per capita expenditure"
        unit="(ratio)"
      >
        <Branch
          active={false}
          key="321"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="65"
        name="Gini coefficient of per capita expenditure"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="322"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="66"
        name="MLD of per capita expenditure"
        unit="(index)"
      >
        <Branch
          active={false}
          key="323"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="29"
      name="Wealth"
    >
      <Branch
        active={false}
        key="67"
        name="Access to all key durable assets"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="151"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="152"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="68"
        name="Lack of access to durable assets"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="153"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="154"
          leaf={true}
          name="Slums"
        />
      </Branch>
      <Branch
        active={false}
        key="69"
        name="Housing ownership"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="324"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="70"
        name="Land ownership"
        unit="(percent of households)"
      >
        <Branch
          active={false}
          key="325"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="71"
        name="Gini coefficient of landholding"
        unit="(percent)"
      >
        <Branch
          active={false}
          key="326"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="72"
        name="MLD of landholding"
        unit="(index)"
      >
        <Branch
          active={false}
          key="327"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="30"
      name="Household size"
    >
      <Branch
        active={false}
        key="73"
        name="People per household"
        unit="(people)"
      >
        <Branch
          active={false}
          key="155"
          leaf={true}
          name="total"
        />
        <Branch
          active={false}
          key="156"
          leaf={true}
          name="slums"
        />
      </Branch>
      <Branch
        active={false}
        key="74"
        name="People per room"
        unit="(people)"
      >
        <Branch
          active={false}
          key="157"
          leaf={true}
          name="total"
        />
        <Branch
          active={false}
          key="158"
          leaf={true}
          name="slums"
        />
      </Branch>
      <Branch
        active={false}
        key="75"
        name="Overcrowding"
        unit="(percent of housing units)"
      >
        <Branch
          active={false}
          key="159"
          leaf={true}
          name="total"
        />
        <Branch
          active={false}
          key="160"
          leaf={true}
          name="slums"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="10"
    name="Health"
  >
    <Branch
      active={false}
      key="31"
      name="Nutrition"
    >
      <Branch
        active={false}
        key="76"
        name="Underweight"
        unit="(percent of children, 0-4 years)"
      >
        <Branch
          active={false}
          key="328"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="77"
        name="Wasting"
        unit="(percent of children, 0-4 years)"
      >
        <Branch
          active={false}
          key="329"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="78"
        name="Stunting"
        unit="(percent of children, 0-4 years)"
      >
        <Branch
          active={false}
          key="330"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="32"
      name="Health Services"
    >
      <Branch
        active={false}
        key="79"
        name="Secondary health care centers"
        unit="(per 1,000 people)"
      >
        <Branch
          active={false}
          key="331"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="80"
        name="Primary health care centers"
        unit="(per 1,000 people)"
      >
        <Branch
          active={false}
          key="332"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="81"
        name="Institutional births"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="333"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="82"
        name="Diarrhea treatment"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="334"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="83"
        name="DPT immunization"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="335"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="84"
        name="Full immunization"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="336"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="33"
      name="Reproductive Health"
    >
      <Branch
        active={false}
        key="85"
        name="Three ante-natal care visits"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="337"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="86"
        name="Female use of condom "
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="338"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="87"
        name="Female contraceptive prevalence "
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="339"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="34"
      name="Mortality and morbidity"
    >
      <Branch
        active={false}
        key="88"
        name="Infant mortality rate"
        unit="(deaths per 1,000 live births)"
      >
        <Branch
          active={false}
          key="161"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="162"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="163"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="89"
        name="Neonatal mortality rate"
        unit="(deaths per 1,000 live births)"
      >
        <Branch
          active={false}
          key="340"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="90"
        name="Under-five mortality rate"
        unit="(deaths per 1,000 live births)"
      >
        <Branch
          active={false}
          key="164"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="165"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="166"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="91"
        name="Acute illness among children"
        unit="(percent of children, 0–4 years)"
      >
        <Branch
          active={false}
          key="167"
          leaf={true}
          name="Acute respiratory infection"
        />
        <Branch
          active={false}
          key="168"
          leaf={true}
          name="Diarrhea"
        />
        <Branch
          active={false}
          key="169"
          leaf={true}
          name="Fever"
        />
      </Branch>
      <Branch
        active={false}
        key="92"
        name="Acute illness"
        unit="(per 100,000 people)"
      >
        <Branch
          active={false}
          key="170"
          leaf={true}
          name="Acute respiratory infection"
        />
        <Branch
          active={false}
          key="171"
          leaf={true}
          name="Diarrhea"
        />
        <Branch
          active={false}
          key="172"
          leaf={true}
          name="Fever"
        />
      </Branch>
      <Branch
        active={false}
        key="93"
        name="Chronic illness"
        unit="(per 100,000 people)"
      >
        <Branch
          active={false}
          key="173"
          leaf={true}
          name="Arthritis"
        />
        <Branch
          active={false}
          key="174"
          leaf={true}
          name="Asthma"
        />
        <Branch
          active={false}
          key="175"
          leaf={true}
          name="Diabetes"
        />
        <Branch
          active={false}
          key="176"
          leaf={true}
          name="Hypertension"
        />
        <Branch
          active={false}
          key="177"
          leaf={true}
          name="Tuberculosis"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="11"
    name="Education"
  >
    <Branch
      active={false}
      key="35"
      name="Enrollment"
    >
      <Branch
        active={false}
        key="94"
        name="Gross primary enrollment"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="178"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="179"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="180"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="95"
        name="Out-of-school children"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="341"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="36"
      name="Attainment"
    >
      <Branch
        active={false}
        key="96"
        name="Literacy rate, 7+ years"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="181"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="182"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="183"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="97"
        name="Literacy rate, 15+ years"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="184"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="185"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="186"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="98"
        name="Secondary education completion rate, 15+ years"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="187"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="188"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="189"
          leaf={true}
          name="Male"
        />
      </Branch>
      <Branch
        active={false}
        key="99"
        name="Tertiary education completion rate, 15+ years"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="190"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="191"
          leaf={true}
          name="Female"
        />
        <Branch
          active={false}
          key="192"
          leaf={true}
          name="Male"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="37"
      name="Learning"
    >
      <Branch
        active={false}
        key="100"
        name="Children who can recognize numbers 1–9"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="342"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="101"
        name="Children who can read letters or words"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="343"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="102"
        name="Children who can do subtraction"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="344"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="103"
        name="Children who can read Grade 1 text"
        unit="(percent of population group)"
      >
        <Branch
          active={false}
          key="345"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="38"
      name="Education Services"
    >
      <Branch
        active={false}
        key="104"
        name="Classrooms in good condition in primary schools"
        unit="(percent of classrooms)"
      >
        <Branch
          active={false}
          key="346"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="105"
        name="Access to electricity in primary schools"
        unit="(percentof schools)"
      >
        <Branch
          active={false}
          key="347"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="106"
        name="Girls’ toilets in primary schools"
        unit="(percent of schools with girls)"
      >
        <Branch
          active={false}
          key="348"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="107"
        name="Drinking water facility in primary schools"
        unit="(percent of schools)"
      >
        <Branch
          active={false}
          key="349"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="108"
        name="Pupil-teacher ratio in primary schools"
        unit="(students per teacher)"
      >
        <Branch
          active={false}
          key="350"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="109"
        name="Pupil-teacher ratio over 30 in primary schools"
        unit="(percent of schools)"
      >
        <Branch
          active={false}
          key="351"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
  </Branch>
  <Branch
    active={false}
    key="12"
    name="Environment"
  >
    <Branch
      active={false}
      key="39"
      name="Terrain"
    >
      <Branch
        active={false}
        key="110"
        name="Elevation"
        unit="(meters)"
      >
        <Branch
          active={false}
          key="352"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="111"
        name="Surface Roughness"
        unit="(meters)"
      >
        <Branch
          active={false}
          key="353"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="112"
        name="Land area with limited or no constraints"
        unit="(percent of land area)"
      >
        <Branch
          active={false}
          key="354"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="113"
        name="Land area equipped for irrigation"
        unit="Percent of Land Area"
      >
        <Branch
          active={false}
          key="193"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="194"
          leaf={true}
          name="Ground Water"
        />
        <Branch
          active={false}
          key="195"
          leaf={true}
          name="Surface Water"
        />
      </Branch>
      <Branch
        active={false}
        key="114"
        name="Land area actually irrigated"
        unit="Percent of Land Area"
      >
        <Branch
          active={false}
          key="355"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="40"
      name="Natural resources"
    >
      <Branch
        active={false}
        key="115"
        name="Cropland"
        unit="(percent of area)"
      >
        <Branch
          active={false}
          key="356"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="116"
        name="Forest"
        unit="(percent of area)"
      >
        <Branch
          active={false}
          key="357"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="117"
        name="Mineral Facilities"
        unit="(number of facilities)"
      >
        <Branch
          active={false}
          key="196"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="197"
          leaf={true}
          name="Public"
        />
        <Branch
          active={false}
          key="198"
          leaf={true}
          name="Private"
        />
        <Branch
          active={false}
          key="199"
          leaf={true}
          name="Foreign"
        />
      </Branch>
      <Branch
        active={false}
        key="118"
        name="Mineral Production Capacity"
        unit="thousand metric tons per year"
      >
        <Branch
          active={false}
          key="358"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="119"
        name="Protected Land"
        unit="percent of area"
      >
        <Branch
          active={false}
          key="200"
          leaf={true}
          name="Total"
        />
        <Branch
          active={false}
          key="201"
          leaf={true}
          name="National"
        />
        <Branch
          active={false}
          key="202"
          leaf={true}
          name="International"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="41"
      name="Climate"
    >
      <Branch
        active={false}
        key="120"
        name="Monthly temperature"
        unit="(ºC)"
      >
        <Branch
          active={false}
          key="203"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="204"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="205"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="206"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="207"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="208"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="209"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="210"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="211"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="212"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="213"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="214"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="121"
        name="Decadal average of monthly temperature"
        unit="(ºC)"
      >
        <Branch
          active={false}
          key="215"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="216"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="217"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="218"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="219"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="220"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="221"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="222"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="223"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="224"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="225"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="226"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="122"
        name="Decadal variation of monthly temperature"
        unit="(ºC)"
      >
        <Branch
          active={false}
          key="227"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="228"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="229"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="230"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="231"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="232"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="233"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="234"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="235"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="236"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="237"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="238"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="123"
        name="Temperature anomaly"
        unit="(ºC)"
      >
        <Branch
          active={false}
          key="239"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="240"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="241"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="242"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="243"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="244"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="245"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="246"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="247"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="248"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="249"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="250"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="124"
        name="Precipitation"
        unit="(mm)"
      >
        <Branch
          active={false}
          key="251"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="252"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="253"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="254"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="255"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="256"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="257"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="258"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="259"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="260"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="261"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="262"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="125"
        name="Decadal average of monthly precipitation"
        unit="(mm)"
      >
        <Branch
          active={false}
          key="263"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="264"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="265"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="266"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="267"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="268"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="269"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="270"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="271"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="272"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="273"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="274"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="126"
        name="Decadal variation of monthly precipitation"
        unit="(mm)"
      >
        <Branch
          active={false}
          key="275"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="276"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="277"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="278"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="279"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="280"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="281"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="282"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="283"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="284"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="285"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="286"
          leaf={true}
          name="December"
        />
      </Branch>
      <Branch
        active={false}
        key="127"
        name="Precipitation anomaly"
        unit="(mm)"
      >
        <Branch
          active={false}
          key="287"
          leaf={true}
          name="January"
        />
        <Branch
          active={false}
          key="288"
          leaf={true}
          name="February"
        />
        <Branch
          active={false}
          key="289"
          leaf={true}
          name="March"
        />
        <Branch
          active={false}
          key="290"
          leaf={true}
          name="April"
        />
        <Branch
          active={false}
          key="291"
          leaf={true}
          name="May"
        />
        <Branch
          active={false}
          key="292"
          leaf={true}
          name="June"
        />
        <Branch
          active={false}
          key="293"
          leaf={true}
          name="July"
        />
        <Branch
          active={false}
          key="294"
          leaf={true}
          name="August"
        />
        <Branch
          active={false}
          key="295"
          leaf={true}
          name="September"
        />
        <Branch
          active={false}
          key="296"
          leaf={true}
          name="October"
        />
        <Branch
          active={false}
          key="297"
          leaf={true}
          name="November"
        />
        <Branch
          active={false}
          key="298"
          leaf={true}
          name="December"
        />
      </Branch>
    </Branch>
    <Branch
      active={false}
      key="42"
      name="Pollution"
    >
      <Branch
        active={false}
        key="128"
        name="Carbon monoxide levels"
        unit="(parts per billion by volume)"
      >
        <Branch
          active={false}
          key="359"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="129"
        name="Nitrogen dioxide levels"
        unit="(billion molecules/mm2)"
      >
        <Branch
          active={false}
          key="360"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="130"
        name="Aerosol particle radius"
        unit="(percent of small particles)"
      >
        <Branch
          active={false}
          key="361"
          leaf={true}
          name="Total"
        />
      </Branch>
      <Branch
        active={false}
        key="131"
        name="Aerosol optical thickness"
        unit="(thickness scale  0–1)"
      >
        <Branch
          active={false}
          key="362"
          leaf={true}
          name="Total"
        />
      </Branch>
    </Branch>
  </Branch>
</styled.div>
`;

exports[`Tree renders message for error status 1`] = `
<styled.div>
  Could not load resource.
</styled.div>
`;

exports[`Tree renders message for loading status 1`] = `
<styled.div>
  Loading data...
</styled.div>
`;
